# Summertraining-homework

./: .gitignore  README.md
homework/: CMakeLists.txt
homework/include/: INCLDUE
homework/proto/: player.proto
homework/src/: main.cpp
